force-app/main/default/objects/Part_Manifest__c/Part_Manifest__c.object-meta.xml
<CustomObject>
    <label>Part Manifest</label>
    <nameField>
        <label>Part Manifest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Part Manifests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>