force-app/main/default/objects/Part_Manifest__c/fields/CaseNo__c.field-meta.xml
<CustomField>
    <fullName>CaseNo__c</fullName>
    <label>CaseNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>