force-app/main/default/objects/Part_Manifest__c/fields/InvoiceSeqNo__c.field-meta.xml
<CustomField>
    <fullName>InvoiceSeqNo__c</fullName>
    <label>InvoiceSeqNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>