force-app/main/default/objects/Part_Manifest__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Part Manifests</relationshipLabel>
    <relationshipName>Part_Manifests</relationshipName>
    <type>Lookup</type>
</CustomField>