force-app/main/default/objects/Part_Manifest__c/fields/ShipmentNo__c.field-meta.xml
<CustomField>
    <fullName>ShipmentNo__c</fullName>
    <label>ShipmentNo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>