force-app/main/default/objects/Part_Manifest__c/fields/ShippedDate__c.field-meta.xml
<CustomField>
    <fullName>ShippedDate__c</fullName>
    <label>ShippedDate</label>
    <type>Date</type>
</CustomField>