force-app/main/default/objects/Part_Manifest__c/fields/YourOrderNo__c.field-meta.xml
<CustomField>
    <fullName>YourOrderNo__c</fullName>
    <formula>Order__r.OrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YourOrderNo</label>
    <type>Text</type>
</CustomField>